Change organization name, URLs and email addresses

--- a/app/views/signup_mailer/invite.html.haml
+++ b/app/views/signup_mailer/invite.html.haml
@@ -1,5 +1,5 @@
 %h2
-  Welcome to Asset Builders Bay Area!
+  Welcome to the Game Theory Academy Resource Directory!
 
 %p
   To log into your account, please use the information below:
@@ -7,7 +7,7 @@
 %ul
   %li
     URL:
-    = link_to 'http://www.assetbuilding-bayarea.org', 'http://www.assetbuilding-bayarea.org'
+    = link_to 'http://www.gametheoryacademy.org', 'http://www.gametheoryacademy.org'
   %li
     Email: 
     = @user.email
@@ -20,4 +20,4 @@
 
 %p
   If you have any questions, please contact
-  = mail_to 'info@assettbuilding-bayarea.org', 'info@assettbuilding-bayarea.org'
+  = mail_to 'trish@gametheoryacademy.org', 'trish@gametheoryacademy.org'
