--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Bay Area Asset Building Resources</title>
+    <title>Game Theory Academy Resource Directory</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
@@ -39,7 +39,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </a>
-          <%= link_to 'Bay Area Asset Building Resources', root_url, :class => 'brand' %>
+          <%= link_to 'Game Theory Academy Resource Directory', root_url, :class => 'brand' %>
           <ul class='nav'>
             <li><%= link_to 'Home', root_url %></li>
             <li><%= link_to 'About Us', page_path('about') %></li>
