--- a/app/views/signup_mailer/invite.txt.haml
+++ b/app/views/signup_mailer/invite.txt.haml
@@ -1,9 +1,9 @@
-Welcome to Asset Builders Bay Area!
+Welcome to the Game Theory Academy Resource Directory!
 
 To log into your account, please use the information below:
 
 URL:
-= link_to 'http://www.assetbuilding-bayarea.org', 'http://www.assetbuilding-bayarea.org'
+= link_to 'http://www.gametheoryacademy.org', 'http://www.gametheoryacademy.org'
 
 Email: 
 = @user.email
@@ -13,4 +13,4 @@ Temporary Password:
 
 Once you have successfully logged into your account, please change your password.
 
-== If you have any questions, please contact #{mail_to 'info@assettbuilding-bayarea.org', 'info@assettbuilding-bayarea.org'}
+== If you have any questions, please contact #{mail_to 'info@gametheoryacademy.org', 'info@gametheoryacademy.org'}
