Change County to BusinessType; remove unused controllers

--- a/app/views/admin/organizations/_form.html.haml
+++ b/app/views/admin/organizations/_form.html.haml
@@ -19,8 +19,8 @@
       = f.label :city
       = f.text_field :city
     .field
-      = f.label :county_id
-      = f.select :county_id, options_from_collection_for_select(County.all(:order => :name), :id, :name)
+      = f.label :business_type_id
+      = f.select :business_type_id, options_from_collection_for_select(BusinessType.all(:order => :name), :id, :name)
     .field
       = f.label :zipcode
       = f.text_field :zipcode
