--- a/app/views/signup_mailer/invite.html.haml
+++ b/app/views/signup_mailer/invite.html.haml
@@ -1,5 +1,5 @@
 %h2
-  Welcome to the Game Theory Academy Resource Directory!
+  Welcome to the Oakland Youth-Friendly Business Directory!
 
 %p
   To log into your account, please use the information below:
