--- a/app/views/signup_mailer/invite.txt.haml
+++ b/app/views/signup_mailer/invite.txt.haml
@@ -1,4 +1,4 @@
-Welcome to the Game Theory Academy Resource Directory!
+Welcome to the Oakland Youth-Friendly Business Directory!
 
 To log into your account, please use the information below:
 
