--- a/app/assets/stylesheets/admin/business_types.css.scss
+++ b/app/assets/stylesheets/admin/business_types.css.scss
@@ -1,3 +1,3 @@
-// Place all the styles related to the admin/counties controller here.
+// Place all the styles related to the admin/business_types controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
