--- a/app/views/admin/pages/_form.html.haml
+++ b/app/views/admin/pages/_form.html.haml
@@ -1,6 +1,6 @@
 -if @page.errors.any?
   #error_explanation
-    %h2= "#{pluralize(@page.errors.count, "error")} prohibited this county from being saved:"
+    %h2= "#{pluralize(@page.errors.count, "error")} prohibited this page from being saved:"
     %ul
       - @page.errors.full_messages.each do |msg|
         %li= msg
