--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Game Theory Academy Directory - Admin</title>
+    <title>Oakland Youth-Friendly Business Directory - Admin</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
@@ -48,7 +48,7 @@
               <li><%= link_to 'Organizations & Locations', admin_organizations_path %></li>
               <% if current_user.admin? %> 
                 <li><%= link_to 'Categories', admin_categories_path %></li>
-                <li><%= link_to 'Counties', admin_counties_path %></li>
+                <li><%= link_to 'Business Types', admin_business_types_path %></li>
                 <li><%= link_to 'Users', admin_users_path %></li>
               <% end %>
               <li class='divider-vertical'></li>
