--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Game Theory Academy Resource Directory</title>
+    <title>Oakland Youth-Friendly Business Directory</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
@@ -39,7 +39,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </a>
-          <%= link_to 'Game Theory Academy Resource Directory', root_url, :class => 'brand' %>
+          <%= link_to 'Oakland Youth-Friendly Business Directory', root_url, :class => 'brand' %>
           <ul class='nav'>
             <li><%= link_to 'Home', root_url %></li>
             <li><%= link_to 'About Us', page_path('about') %></li>
@@ -47,18 +47,6 @@
             <li><%= link_to 'More Resources', page_path('more_resources') %></li>
             <li><%= link_to 'Glossary', page_path('glossary') %></li>
           </ul>
-          <div class="nav-collapse pull-right">
-            <!-- <%= link_to image_tag('free-taxes.jpg'), 'http://earnitkeepitsaveit.org/' %> -->
-          
-            <!--
-            <ul class="nav">
-              <% if current_user %>
-                <li><%= link_to 'Sign Out', destroy_user_session_path, :method => :delete %></li>
-              <% else %>
-                <li><%= link_to 'Sign In', new_user_session_path %></li>              
-              <% end %>
-            </ul> -->
-          </div>
         </div>
       </div>
     </div>
