--- a/app/views/admin/locations/_form.html.haml
+++ b/app/views/admin/locations/_form.html.haml
@@ -81,7 +81,7 @@
     
 
   .span4
-    %h2 Services
+    %h2 Categories
     %br/
     - for category in Category.all(:order => :name)
       - if category.services.present?
