--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -45,7 +45,7 @@
               <% if current_user.admin? %> 
                 <li><%= link_to 'Pages', admin_pages_path %></li>
               <% end %>
-              <li><%= link_to 'Organizations & Locations', admin_organizations_path %></li>
+              <li><%= link_to 'Businesses & Locations', admin_organizations_path %></li>
               <% if current_user.admin? %> 
                 <li><%= link_to 'Categories', admin_categories_path %></li>
                 <li><%= link_to 'Business Types', admin_business_types_path %></li>
