--- a/app/views/admin/locations/_form.html.haml
+++ b/app/views/admin/locations/_form.html.haml
@@ -75,33 +75,27 @@
     %h2 Business Types
     %br/
     - for business_type in BusinessType.all(:order=>:name)
-      = check_box_tag "location[business_type_ids][]", business_type.id, @location.business_types.include?(business_type) 
-      = business_type.name
-      %br/
-    
+      .field
+        = check_box_tag "location[business_type_ids][]", business_type.id, @location.business_types.include?(business_type) 
+        = business_type.name
 
   .span4
     %h2 Categories
     %br/
-    - for category in Category.all(:order => :name)
+    - for category in Category.order(:name)
       - if category.services.present?
         %h4= category.name
         - for service in category.services
           .field
-            - if @location.services.include?(service)
-              = check_box_tag "[services][#{service.id}]", 1, true
-            - else
-              = check_box_tag "[services][#{service.id}]"
+            = check_box_tag 'location[service_ids][]', service.id, @location.service_ids.include?(service.id)
             = service.name
         %br/
+        
     .field
       %h4 Service Delivery Methods
-      - for option in ServiceDeliveryOption.all(:order => :name)
+      - for option in ServiceDeliveryOption.order(:name)
         .field
-          - if @location.service_delivery_options.include?(option)
-            = check_box_tag "[service_delivery_options][#{option.id}]", 1, true
-          - else
-            = check_box_tag "[service_delivery_options][#{option.id}]"
+          = check_box_tag 'location[service_delivery_option_ids][]', option.id, @location.service_delivery_option_ids.include?(option.id)
           = option.name
     
 .row
