Change glossary to Youth-Friendly Business

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -45,7 +45,7 @@
             <li><%= link_to 'About Us', page_path('about') %></li>
             <li><%= link_to 'Contact Us', page_path('contact') %></li>
             <li><%= link_to 'More Resources', page_path('more_resources') %></li>
-            <li><%= link_to 'Glossary', page_path('glossary') %></li>
+            <li><%= link_to 'Become a Youth-Friendly Business', page_path('youth_friendly_business') %></li>
           </ul>
         </div>
       </div>
