Change page name

--- a/app/views/pages/youth_friendly_business.html.haml
+++ b/app/views/pages/youth_friendly_business.html.haml
@@ -1,3 +1,3 @@
-%h1 Become a Youth-Friendly Business
+%h1 Join the Directory
 %br/
-= raw(Page.find_by_name("Become a Youth-Friendly Business").try(:body))
+= raw(Page.find_by_name("Join").try(:body))
