Update page name

--- a/app/views/pages/youth_friendly_business.html.haml
+++ b/app/views/pages/youth_friendly_business.html.haml
@@ -1,3 +1,3 @@
-%h1 Join the Directory
+%h1 How to Become a Youth-Friendly Business
 %br/
-= raw(Page.find_by_name("Join").try(:body))
+= raw(Page.find_by_name("How To").try(:body))
