--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -83,13 +83,7 @@
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
     <%= javascript_include_tag "application" %>
-    <script type="text/javascript">
-      tinyMCE.init({
-        mode: 'specific_textareas',
-        editor_selector: 'tinymce', 
-        theme: 'simple',
-      });
-    </script>
+    <%= tinymce %>
     
   </body>
 </html>
