--- a/app/views/locations/show.html.haml
+++ b/app/views/locations/show.html.haml
@@ -2,6 +2,8 @@
 
 .row
   .span6
+    %p
+      = @location.try(:organization).try(:description)
     %h3 Contact Info
     %br/
     %h4 Location Info
